--- a/BinaryTree/BinaryTree/BinaryTree.vcxproj.filters
+++ b/BinaryTree/BinaryTree/BinaryTree.vcxproj.filters
@@ -18,12 +18,15 @@
     <ClCompile Include="Sources\Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Sources\BinaryTree.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Headers\BinaryTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Headers\BinarySearchTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Headers\Common.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
